--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "type": "module",
   "dependencies": {
     "fastify": "^5.6.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
