refactor(tsconfig): adding relative paths for folders utils and entities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,11 @@
     "baseUrl": ".",
     "paths": {
       "@errors/*": ["src/errors/*"],
+      "@entities/*": ["src/entities/*"],
       "@routes": ["src/routes/index.ts"],
       "@abstracts/*": ["src/abstracts/*"],
-      "@modules/*": ["src/modules/*"]
+      "@modules/*": ["src/modules/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
