--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "zod": "^4.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.3",
+    "eslint": "^9.39.2",
+    "jiti": "^2.6.1",
+    "prettier": "^3.7.4",
     "tsx": "^4.21.0",
+    "typescript-eslint": "^8.51.0",
     "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
   }
