--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.3",
     "eslint": "^9.39.2",
+    "husky": "^9.1.7",
     "jiti": "^2.6.1",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "tsx": "^4.21.0",
     "typescript-eslint": "^8.51.0",
