--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -28,5 +29,13 @@
     "typescript-eslint": "^8.51.0",
     "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
-  }
+  },
+  "lint-staged": {
+    "*.{ts,html}": [
+      "eslint --fix"
+    ],
+    "*.{ts,json,md}": [
+      "prettier --write"
+    ]
+  }}
 }
